# areman-dj

./: .env.defaults  .env.main.defaults  .env.playground.defaults  .gitignore  Dockerfile.mermaid  Makefile  PROJECT_DOCSTRINGS.md  PROJECT_INDEX.md  README.md  all_models_combined.txt  collect_all_python_files.py  combine_models_only.py  git_commit.sh  project_docstring_extractor.py  project_indexer.py  pyproject.toml
apps/catalog/: apps.py
apps/catalog/admin/: channel.py  channel_variant.py  manufacturer.py  origin.py  packing.py  product.py  product_group.py  product_media.py  product_variant.py  state.py
apps/catalog/migrations/: 0001_initial.py  0002_packing.py  0002_productvariant_eclass_code.py  0002_productvariant_is_topseller.py  (+25 more)
config/: settings.py  urls.py
data/import/: komatsu_06-25_short.xlsx
docs/: MAKE_CMDS.md  chatgpt_instruction.txt  chatgpt_instructions2.txt  dev_notes.md  import.txt
docs/ai_instructions/: chatgpt_todo.txt  doku_template.txt  trigger_chatgpt_nach_upload_alles
docs/chat_gpt_ausgabe/: Beschreibung_2025_09_26.txt  uebersicht_Tabellen.txt
docs/conventions/: models.md
doku/: 000_install_django.txt  create_db.txt  create_er.txt
scripts/: bootstrap_django.py  clear_migrations.sh  create_playground.sh  dbutils.py  debug_import_global_defaults.py  debug_product_ops.py  er_diagram.mmd  gen_mermaid_er.py  render_mermaid.py  seed_base_data.sh  test_db.py
scripts/diagrams/: er_catalog.mmd  er_core.mmd  er_partners.mmd  er_pricing.mmd  er_procurement.mmd  er_sales.mmd
scripts/erd/: er_core.mmd  er_pricing.mmd  er_procurement.mmd
(+136 files in other folders)
